--- a/config/loki/loki-config-s3.yml
+++ b/config/loki/loki-config-s3.yml
@@ -16,7 +16,8 @@ ingester:
   chunk_target_size: 1048576  # Loki will attempt to build chunks up to 1.5MB, flushing first if chunk_idle_period or max_chunk_age is reached first
   chunk_retain_period: 30s    # Must be greater than index read cache TTL if using an index cache (Default index read cache TTL is 5m)
   max_transfer_retries: 0     # Chunk transfers disabled
-
+  wal:
+    dir: "/tmp/loki/wal"
 schema_config:
   configs:
     - from: 2020-10-24
@@ -44,6 +45,7 @@ compactor:
 limits_config:
   reject_old_samples: true
   reject_old_samples_max_age: 168h
+  split_queries_by_interval: 15m   
 
 chunk_store_config:
   max_look_back_period: 336h
@@ -55,7 +57,6 @@ table_manager:
 query_range:
   align_queries_with_step: true
   max_retries: 5
-  split_queries_by_interval: 15m
   parallelise_shardable_queries: true
   cache_results: true
 
